# client_APIGitHub

./: README.md  main.py  pyproject.toml
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_alter_git_name.py  0003_alter_commit_author_alter_git_name.py
client/templates/client/: commit_list.html  git_form.html  git_list.html  graph_template.html
config/: settings.py  urls.py
